# maltaekni-v7

./: .gitignore  Máltækni—Verkefni 7.ipynb  README.md  dictionary.py  levenshtein.py  pyproject.toml  tokenizer.py
data/: songlog.txt
tests/: test_dictionary.py  test_levenshtein.py  test_tokenizer.py
