[tool.poetry]
name = "máltækni v7"
version = "0.1.0"
description = ""
authors = ["Óli <kjarni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pytest-watch = "^4.2.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xyz = "coverage"
